<resources>
    <string name="app_name">LEIAQUI</string>
    <string name="txtTitle">Título</string>
    <string name="txtAutor">Autor</string>
    <string name="txtEditora">Editora</string>
    <string name="txtCodCatLivro">Categoria de Obra</string>
    <string name="txtEdicao">Edição</string>
    <string name="txtPaginas">Páginas</string>
    <string name="txtDtPublicacao">Data de Publicação</string>
    <string name="txtIsbn">ISBN</string>
    <string name="txtKeywords">Palavras Chave</string>
    <string name="fieldTitle" />
    <string name="fieldAutor" />
    <string name="fieldEditora" />
    <string name="fieldCodCatLivro" />
    <string name="fieldEdicao" />
    <string name="fieldPaginas" />
    <string name="fieldDtPublicacao" />
    <string name="fieldIsbn" />
    <string name="fieldKeywords" />
    <string name="txtCodCatCliente">Categoria de Cliente</string>
    <string name="txtNome">Nome</string>
    <string name="txtEndereco">Endereco</string>
    <string name="txtCelular">Celular</string>
    <string name="txtEmail">Email</string>
    <string name="txtCpf">CPF</string>
    <string name="txtDtNascimento">Data de Nascimento</string>
    <string name="fieldCodCatCliente" />
    <string name="fieldNome" />
    <string name="fieldEndereco" />
    <string name="fieldCelular" />
    <string name="fieldEmail" />
    <string name="fieldCpf" />
    <string name="fieldDtNascimento" />
    <string name="txtPrazoEmp">Prazo de Empréstimo</string>
    <string name="txtDescricao">Descrição</string>
    <string name="txtTaxaAtraso">Taxa de Atraso</string>
    <string name="fieldPrazoEmp" />
    <string name="fieldDescricao" />
    <string name="fieldTaxaAtraso" />
    <string name="txtPrazoDev">Prazo para Devolução</string>
    <string name="fieldPrazoDev" />
    <string name="btnCadastrar">Cadastrar</string>
    <string name="btnConsultar">Consultar</string>
    <string name="btnAlterar">Alterar</string>
    <string name="btnDeletar">Deletar</string>
    <string name="btnObras">Obras</string>
    <string name="btnLeitores">Leitores</string>
    <string name="txtId" />
    <string name="listTitulo" />
    <string name="listId" />
    <string name="livroAutores" />
    <string name="listNome" />
    <string name="btnLimpar">Limpar</string>
    <string name="btnFiltrar">Filtrar</string>
    <string name="btnEmprestimos">Empréstimos</string>
    <string name="btnEmprestar">Emprestar</string>
    <string name="txtEmpTitle">Título a ser emprestado</string>
    <string name="txtCliEmp">Cliente a receber o livro</string>
    <string name="fieldFiltro" />
    <string name="livroCliente" />
    <string name="btnDevolver">Devolver</string>
    <string name="txtDtRetirada">Data de Retirada</string>
    <string name="txtDtDevolucao">Data de Devolução (Prevista)</string>
    <string name="title_activity_login">Entrar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar ou Registrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bem vindo!"</string>
    <string name="invalid_username">Nome de usuário inválido</string>
    <string name="invalid_password">Senha deve ter mais que 5 caracteres</string>
    <string name="login_failed">"Login falhou"</string>
</resources>
